Migrate to using FFM API